examples/test/testpolicy16780.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16780
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key21: value45
      key27: value47
      key33: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value0
      podSelector:
        matchLabels:
          key40: value47
